--- a/functions/package.json
+++ b/functions/package.json
@@ -3,7 +3,8 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "firebase-admin": "~4.2.1",
-    "firebase-functions": "^0.5.7"
+    "firebase-functions": "^0.5.7",
+    "timer-stopwatch": "0.2.0"
   },
   "private": true
 }
